src/component/resource_table/snapshots/envision__component__resource_table__tests__snapshot_all_healthy.snap
---
source: src/component/resource_table/tests.rs
expression: terminal.backend().to_string()
---
┌ All Healthy ─────────────────────────────────────────────────────────────────┐
│   NAME                 STATUS               RESTARTS   AGE                   │
│●  api-0                Running              0          1m                    │
│●  api-1                Running              0          2m                    │
│●  api-2                Running              0          3m                    │
│●  api-3                Running              0          4m                    │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
