src/component/resource_table/snapshots/envision__component__resource_table__tests__snapshot_empty.snap
---
source: src/component/resource_table/tests.rs
expression: terminal.backend().to_string()
---
┌ Pods ────────────────────────────────────────────────────────────────────────┐
│(no rows)                                                                     │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
