src/component/resource_table/snapshots/envision__component__resource_table__tests__snapshot_mixed_status.snap
---
source: src/component/resource_table/tests.rs
expression: terminal.backend().to_string()
---
┌ Pods (mixed) ────────────────────────────────────────────────────────────────┐
│   NAME                 STATUS               RESTARTS   AGE                   │
│●  nginx-abc            Running              0          3m12s                 │
│✖  redis-def            CrashLoopBackOff     5          1m                    │
│▲  worker-ghi           Pending              0          10s                   │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
