src/component/resource_table/snapshots/envision__component__resource_table__tests__snapshot_no_status_column.snap
---
source: src/component/resource_table/tests.rs
expression: terminal.backend().to_string()
---
┌ Plain ───────────────────────────────┐
│COL1       COL2                       │
│a          b                          │
│c          d                          │
│                                      │
│                                      │
│                                      │
└──────────────────────────────────────┘
